# wire-server

./: .dockerignore  .editorconfig  .envrc  .envrc.local.default  .gitattributes  .gitignore  .gitmodules  .headroom.yaml  .hlint.yaml  .hspec  .licensure.yml  .ormolu  .travis.yml  AGENTS.md  CHANGELOG-draft.md  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile-poetry  Example-IntermediateCA.key  Makefile  NATS_MIGRATION_STATUS.md  README.md  README_NATS_MIGRATION.md  SECURITY.md  Setup_start.hs  WORKSPACE  WPB-2542  abf.yaml  break-cannon.json  break-cannon.sh  build.nix  cabal.project  cabal.project.freeze  cabal.project.local-default  capstone-scan.py  cassandra-schema.cql  cassandra-schema.docs  default.nix  dev-packages.nix  (+47 more)
integration/: README.md  Setup.hs  default.nix  integration.cabal  main.hs  run-services.hs  unit.hs
integration/scripts/: integration-dynamic-backends-brig-index.sh  integration-dynamic-backends-db-schemas.sh  integration-dynamic-backends-s3.sh  integration-dynamic-backends-ses.sh  integration-dynamic-backends-sqs.sh  integration-dynamic-backends-vhosts.sh
integration/test/: API.hs  App.hs  Config.hs  JSON.hs  Notifications.hs  Response.hs  Run.hs  Setup.hs  SetupHelpers.hs
integration/test/API/: Brig.hs  BrigCommon.hs  BrigInternal.hs  Cargohold.hs  Common.hs  Federator.hs  Galley.hs  GalleyCommon.hs  GalleyInternal.hs  Gundeck.hs  GundeckInternal.hs  Nginz.hs  Proxy.hs  Spar.hs  SparInternal.hs  Stern.hs
integration/test/MLS/: Util.hs
integration/test/Performance/: BigConversation.hs
integration/test/SetupHelpers/: Proxied.hs
integration/test/Test/: AccessUpdate.hs  Apps.hs  AssetDownload.hs  AssetUpload.hs  Auth.hs  B2B.hs  BlockedDomains.hs  Bot.hs  Brig.hs  Cargohold.hs  Cells.hs  ChannelSearch.hs  Channels.hs  Client.hs  Connection.hs  Conversation.hs  DNSMock.hs  Defederation.hs  Demo.hs  DomainVerification.hs  EJPD.hs  EnterpriseLogin.hs  Errors.hs  Events.hs  ExternalPartner.hs  FeatureFlags.hs  Federation.hs  Federator.hs  Gundeck.hs  HTTP2.hs  LegalHold.hs  Login.hs  MLS.hs  Meetings.hs  MessageTimer.hs  NginxZAuthModule.hs  Notifications.hs  NotificationsBenchmark.hs  OAuth.hs  PasswordReset.hs  (+20 more)
integration/test/Test/Cargohold/: API.hs  App.hs  AssetDownload.hs  AssetUpload.hs  Metrics.hs
integration/test/Test/Conversation/: Migration.hs
integration/test/Test/FeatureFlags/: AllowedGlobalOperations.hs  AppLock.hs  Apps.hs  AssetAuditLog.hs  Cells.hs  CellsInternal.hs  Channels.hs  ChatBubbles.hs  ClassifiedDomains.hs  ConferenceCalling.hs  ConsumableNotifications.hs  DigitalSignatures.hs  DomainRegistration.hs  EnforceFileDownloadLocation.hs  EphemeralUserCreation.hs  FileSharing.hs  GuestLinks.hs  Initialisation.hs  LegalHold.hs  Meeting.hs  MeetingPremium.hs  Mls.hs  MlsE2EId.hs  MlsMigration.hs  OutlookCalIntegration.hs  PayingTeam.hs  Pydio.hs  RequireExternalEmailVerification.hs  SSO.hs  SearchVisibilityAvailable.hs  StealthUsers.hs  (+7 more)
integration/test/TestLib/: App.hs  Cannon.hs  Prelude.hs  Run.hs  SetupHelpers.hs
integration/test/Testlib/: App.hs  Assertions.hs  Cannon.hs  Certs.hs  Env.hs  HTTP.hs  JSON.hs  KleisliXML.hs  Mock.hs  MockIntegrationService.hs  ModService.hs  One2One.hs  Options.hs  PTest.hs  Ports.hs  Prekeys.hs  Prelude.hs  Printing.hs  ResourcePool.hs  Run.hs  RunServices.hs  Service.hs  Types.hs  VersionedFed.hs  XML.hs
integration/test/resources/: cert.pem  key.pem
integration/tests/: conftest.py  test_test.py
integration/tests/galley/: test_api.py  test_mls.py
integration/tests/helpers/: api.py  assertions.py  context.py  conversions.py  frozendict.py  prekeys.py  response.py  setup.py
integration/unit/: Basic.hs
libs/api-client/: api-client.cabal  default.nix  package.yaml  stack.yaml
libs/bilge/: BUILD.bazel  Makefile  README.md  bilge.cabal  default.nix  package.yaml  stack.yaml
libs/bilge/examples/: google.hs
libs/bilge/src/: Bilge.hs
libs/brig-types/: brig-types.cabal  default.nix  package.yaml  stack.yaml
libs/cargohold-types/: .ormolu  cargohold-types.cabal  default.nix  package.yaml  stack.yaml
libs/cassandra-util/: Makefile  README.md  cassandra-util.cabal  default.nix  package.yaml  stack.yaml
libs/cassandra-util/src/: Cassandra.hs
libs/deriving-swagger2/: default.nix  deriving-swagger2.cabal  package.yaml
libs/dns-util/: default.nix  dns-util.cabal  package.yaml
libs/es-compat/: default.nix  es-compat.cabal
libs/extended/: BUILD.bazel  default.nix  extended.cabal  package.yaml
libs/galley-types/: default.nix  galley-types.cabal  package.yaml  stack.yaml
libs/gundeck-types/: default.nix  gundeck-types.cabal  package.yaml  stack.yaml
libs/hscim/: .gitignore  CHANGELOG  Makefile  README.md  Setup.hs  default.nix  hscim.cabal  package.yaml  stack-deps.nix
libs/hscim/changelog.d/: scim-patch-aeson-diff-implementation
libs/hscim/server/: Main.hs
libs/hscim/tools/: ormolu.sh
libs/http-client-openssl-ext/: http-client-openssl-ext.cabal
libs/http2-manager/: default.nix  http2-manager.cabal
libs/http2-manager/test/: Main.hs
libs/imports/: BUILD.bazel  default.nix  imports.cabal  package.yaml
libs/imports/src/: Imports.hs  Orphans.hs
libs/jwt-tools/: a.out  default.nix  jwt-tools.cabal
libs/jwt-tools/src/: Main.hs
libs/jwt-tools/test/: Spec  Spec.hs
libs/metrics-collectd/: Makefile  metrics-collectd.cabal  package.yaml  stack.yaml
libs/metrics-collectd/conf/: sample.ini
libs/metrics-collectd/main/: Main.hs
libs/metrics-core/: BUILD.bazel  default.nix  metrics-core.cabal  package.yaml
libs/metrics-core/bench/: Main.hs
libs/metrics-wai/: BUILD.bazel  default.nix  metrics-wai.cabal  package.yaml  stack.yaml
libs/metrics-wai/test/: Main.hs
libs/polysemy-wire-zoo/: default.nix  package.yaml  polysemy-wire-zoo.cabal
libs/ropes/: default.nix  package.yaml  ropes.cabal  stack.yaml
libs/saml2-web-sso/: .gitignore  Makefile  README.md  default.nix  dot-ghci  package.yaml  saml2-web-sso.cabal  stack.yaml
libs/saml2-web-sso/test/: Samples.hs  Spec.hs
libs/saml2-web-sso/tools/: ormolu.sh
libs/saml2-web-sso/toy-sp/: Main.hs
(+14218 files in other folders)
