[tool.poetry]
name = "mnt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rst2pdf = "^0.98"
Sphinx = "^3.5.2"
recommonmark = "^0.7.1"
awscli = "^1.19.28"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-fulltoc = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
