name:                api-client
version:             0.4.2
synopsis:            (Internal) Wire HTTP API Client
author:              Wire Swiss GmbH
maintainer:          Wire Swiss GmbH <backend@wire.com>
license:             AGPL-3
license-file:        LICENSE
stability:           experimental
category:            Network
build-type:          Simple
cabal-version:       >= 1.14

description:
    An (internal) client library for the Wire HTTP API.

library
    default-language: Haskell2010
    default-extensions:
        DataKinds
        OverloadedLabels
        ViewPatterns
        TypeOperators

    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Network.Wire.Client
        Network.Wire.Client.Call
        Network.Wire.Client.API.Auth
        Network.Wire.Client.API.Asset
        Network.Wire.Client.API.Conversation
        Network.Wire.Client.API.Push
        Network.Wire.Client.API.Search
        Network.Wire.Client.API.User
        Network.Wire.Client.API.Client
        Network.Wire.Client.Monad
        Network.Wire.Client.Session

    build-depends:
        aeson                 >= 0.11
      , async                 >= 2.0
      , base                  >= 4.6   && < 5
      , base64-bytestring     >= 1.0
      , bilge                 >= 0.21
      , brig-types            >= 0.84
      , bytestring-conversion >= 0.2
      , cargohold-types       >= 0.25.6
      , cookie                >= 0.4
      , connection            >= 0.2
      , cryptobox-haskell     >= 0.1.1
      , cryptonite            >= 0.17
      , data-default-class    >= 0.0
      , bytestring            >= 0.10
      , errors                >= 2.1
      , exceptions            >= 0.8
      , galley-types          >= 0.66
      , gundeck-types         >= 1.24
      , http-client           >= 0.4
      , http-types            >= 0.8
      , memory                >= 0.12
      , mime                  >= 0.4
      , monad-control         >= 1.0
      , mtl                   >= 2.1
      , network               >= 2.4
      , retry                 >= 0.7
      , semigroups            >= 0.10
      , text                  >= 1.2
      , time                  >= 1.5
      , transformers          >= 0.3
      , tinylog               >= 0.14
      , transformers-base     >= 0.4
      , types-common          >= 0.16
      , unordered-containers  >= 0.2
      , uuid                  >= 1.3
      , websockets            >= 0.9
      , named                 == 0.2.*
