name:                bilge
version:             0.22.0
synopsis:            Library for composing HTTP requests.
author:              Wire Swiss GmbH
maintainer:          Wire Swiss GmbH <backend@wire.com>
copyright:           (c) 2017 Wire Swiss GmbH
license:             AGPL-3
license-file:        LICENSE
stability:           experimental
category:            Network
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

description:
    Library for constructing HTTP requests and asserting on their responses.

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Bilge
      , Bilge.Assert
      , Bilge.IO
      , Bilge.Request
      , Bilge.Response
      , Bilge.Retry
      , Bilge.RPC

    build-depends:
        aeson             >= 0.6
      , ansi-terminal     >= 0.6
      , base              >= 4.7 && < 5
      , case-insensitive  >= 1.1
      , data-default      >= 0.5
      , bytestring        >= 0.9
      , containers        >= 0.5
      , errors            >= 1.4
      , exceptions        >= 0.6
      , http-client       >= 0.5
      , http-types        >= 0.8
      , monad-control     >= 1.0
      , mtl               >= 2.2
      , text              >= 0.11
      , time              >= 1.4
      , tinylog           >= 0.9
      , transformers      >= 0.4
      , transformers-base >= 0.4
      , types-common      >= 0.7
      , unliftio-core     >= 0.1
