cabal-version:      1.12
name:               bilge
version:            0.22.0
synopsis:           Library for composing HTTP requests.
description:
  Library for constructing HTTP requests and asserting on their responses.

category:           Network
stability:          experimental
author:             Wire Swiss GmbH
maintainer:         Wire Swiss GmbH <backend@wire.com>
copyright:          (c) 2017 Wire Swiss GmbH
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:
    Bilge
    Bilge.Assert
    Bilge.IO
    Bilge.Request
    Bilge.Response
    Bilge.Retry
    Bilge.RPC
    Bilge.TestSession

  other-modules:      Paths_bilge
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages

  build-depends:
      aeson              >=2.0.1.0
    , ansi-terminal      >=0.6
    , base               >=4.7     && <5
    , bytestring         >=0.9
    , case-insensitive   >=1.1
    , cookie
    , errors             >=1.4
    , exceptions         >=0.6
    , http-client        >=0.7
    , http-types         >=0.8
    , imports
    , lens
    , monad-control      >=1.0
    , mtl                >=2.2
    , text               >=0.11
    , tinylog            >=0.9
    , transformers-base  >=0.4
    , types-common       >=0.7
    , uri-bytestring
    , wai
    , wai-extra
    , wire-otel

  default-language:   GHC2021
