name:           brig-types
version:        1.35.0
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
synopsis:       User Service
category:       Network
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs: src

    exposed-modules:
        Brig.Types
        Brig.Types.Activation
        Brig.Types.AddressBook
        Brig.Types.Client
        Brig.Types.Client.Prekey
        Brig.Types.Code
        Brig.Types.Common
        Brig.Types.Connection
        Brig.Types.Intra
        Brig.Types.Properties
        Brig.Types.Provider
        Brig.Types.Provider.External
        Brig.Types.Provider.Tag
        Brig.Types.Search
        Brig.Types.Swagger
        Brig.Types.Team.Invitation
        Brig.Types.TURN
        Brig.Types.User
        Brig.Types.User.Auth

    default-language:   Haskell2010

    build-depends:
        aeson                 >= 0.11
      , attoparsec            >= 0.10
      , base                  == 4.*
      , base64-bytestring     >= 1.0
      , bytestring            >= 0.9
      , bytestring-conversion >= 0.2
      , containers            >= 0.5
      , currency-codes        >= 2.0
      , galley-types          >= 0.45.7
      , errors                >= 1.4
      , hashable
      , hostname-validate
      , iproute               >= 1.5
      , iso3166-country-codes >= 0.2
      , iso639                >= 0.1
      , lens
      , lens-aeson
      , network-uri           >= 2.6
      , pem                   >= 0.2
      , safe                  >= 0.3
      , scientific            >= 0.3.4
      , singletons            >= 2.0
      , swagger               >= 0.1
      , text                  >= 0.11
      , time                  >= 1.1
      , types-common          >= 0.16
      , unordered-containers  >= 0.2
      , uuid                  >= 1.3

    ghc-options:
        -Wall
        -O2
        -fwarn-tabs
        -funbox-strict-fields

test-suite brig-types-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: test/unit
    main-is: Main.hs

    other-modules:
        Test.Brig.Types.Arbitrary
        Test.Brig.Types.Common
        Test.Brig.Types.TURN
        Test.Brig.Types.User

    build-depends:
        aeson
      , attoparsec
      , base
      , brig-types
      , bytestring
      , currency-codes
      , galley-types
      , hostname-validate
      , iproute
      , iso639
      , lens
      , QuickCheck
      , quickcheck-instances
      , random
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , text
      , time
      , types-common
      , unordered-containers
      , uuid
      , vector

    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N

    default-language: Haskell2010
