cabal-version: 1.12
name:          brig-types
version:       1.35.0
synopsis:      User Service
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Brig.Types.Activation
    Brig.Types.Common
    Brig.Types.Connection
    Brig.Types.Instances
    Brig.Types.Intra
    Brig.Types.Provider.Tag
    Brig.Types.Search
    Brig.Types.Team
    Brig.Types.Team.LegalHold
    Brig.Types.Test.Arbitrary
    Brig.Types.User
    Brig.Types.User.Event

  other-modules:      Paths_brig_types
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -funbox-strict-fields -Wredundant-constraints

  build-depends:
      aeson                  >=2.0.1.0
    , attoparsec             >=0.10
    , base                   >=4       && <5
    , bytestring
    , bytestring-conversion  >=0.2
    , cassandra-util
    , containers             >=0.5
    , deriving-swagger2      >=0.1.0
    , imports
    , QuickCheck             >=2.9
    , schema-profunctor
    , servant-server         >=0.18.2
    , servant-swagger        >=1.1.10
    , string-conversions
    , swagger2               >=2.5
    , text                   >=0.11
    , time                   >=1.1
    , tinylog
    , types-common           >=0.16
    , unordered-containers   >=0.2
    , wire-api

  default-language:   Haskell2010

test-suite brig-types-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Paths_brig_types
    Test.Brig.Roundtrip
    Test.Brig.Types.Common
    Test.Brig.Types.Team
    Test.Brig.Types.User

  hs-source-dirs:     test/unit
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints

  build-depends:
      aeson                  >=2.0.1.0
    , attoparsec             >=0.10
    , base                   >=4       && <5
    , brig-types
    , bytestring
    , bytestring-conversion  >=0.3.1
    , containers             >=0.5
    , imports
    , QuickCheck             >=2.9
    , swagger2               >=2.5
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text                   >=0.11
    , time                   >=1.1
    , tinylog
    , types-common           >=0.16
    , unordered-containers   >=0.2
    , wire-api

  default-language:   Haskell2010
