cabal-version: 1.12
name:          brig-types
version:       1.35.0
synopsis:      User Service
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
build-type:    Simple

library
  exposed-modules:
    Brig.Types.Activation
    Brig.Types.Connection
    Brig.Types.Instances
    Brig.Types.Intra
    Brig.Types.Provider.Tag
    Brig.Types.Team
    Brig.Types.Team.LegalHold
    Brig.Types.Test.Arbitrary
    Brig.Types.User

  other-modules:      Paths_brig_types
  hs-source-dirs:     src
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -funbox-strict-fields -Wredundant-constraints -Wunused-packages

  build-depends:
      base                   >=4    && <5
    , bytestring-conversion  >=0.2
    , cassandra-util
    , containers             >=0.5
    , imports
    , QuickCheck             >=2.9
    , types-common           >=0.16
    , wire-api

  default-language:   GHC2021

test-suite brig-types-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Paths_brig_types
    Test.Brig.Roundtrip
    Test.Brig.Types.Common
    Test.Brig.Types.Team
    Test.Brig.Types.User

  hs-source-dirs:     test/unit
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -threaded -with-rtsopts=-N -Wredundant-constraints
    -Wunused-packages

  build-depends:
      aeson             >=2.0.1.0
    , base              >=4       && <5
    , brig-types
    , imports
    , openapi3
    , QuickCheck        >=2.9
    , tasty
    , tasty-quickcheck
    , wire-api

  default-language:   GHC2021
