name:          cargohold-types
version:       1.3.10
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2017 Wire Swiss GmbH
license:       AGPL-3
license-file:  LICENSE
synopsis:      Asset Storage API Types
build-type:    Simple
cabal-version: >= 1.10

description:
    API Types for the CargoHold service.

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        CargoHold.Types
        CargoHold.Types.V3
        CargoHold.Types.V3.Resumable

    build-depends:
        aeson                >= 0.6
      , attoparsec           >= 0.10
      , base                 == 4.*
      , byteable             >= 0.1
      , bytestring           >= 0.9
      , bytestring-conversion>= 0.2
      , base16-bytestring    >= 0.1
      , base64-bytestring    >= 1.0
      , cryptohash           >= 0.11
      , containers           >= 0.5
      , data-default         >= 0.5
      , lens                 >= 4.13
      , mime                 >= 0.4
      , text                 >= 0.11
      , time                 >= 1.5
      , types-common         >= 0.16
      , unordered-containers >= 0.2
      , uuid                 >= 1.2

